unpackaged/main/default/objects/maps__LiveDriver__c/fields/maps__LiveWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveWorkingHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Driver&#39;s specific working hours</description>
    <inlineHelpText>Référence aux heures de travail spécifiques du conducteur</inlineHelpText>
    <label>Live Working Hours</label>
    <referenceTo>maps__LiveWorkingHours__c</referenceTo>
    <relationshipLabel>Live Drivers</relationshipLabel>
    <relationshipName>LiveDrivers</relationshipName>
    <type>Lookup</type>
</CustomField>