unpackaged/main/default/objects/maps__LiveDriver__c/fields/maps__Location__c.field-meta.xml
<CustomField>
    <fullName>maps__Location__c</fullName>
    <description>Lat/Long values for this driver&#39;s home address</description>
    <inlineHelpText>Valeur de latitude/longitude de l&#39;adresse du domicile du conducteur</inlineHelpText>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>