unpackaged/main/default/objects/maps__LiveDriver__c/fields/maps__ReceiveHardAccelAlerts__c.field-meta.xml
<CustomField>
    <fullName>maps__ReceiveHardAccelAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Hard Accel Alerts</description>
    <inlineHelpText>Indiquez si le conducteur doit recevoir les alertes d&#39;accélération brutale</inlineHelpText>
    <label>Receive Hard Accel Alerts?</label>
    <type>Checkbox</type>
</CustomField>