unpackaged/main/default/objects/maps__LiveDriver__c/fields/maps__ReceiveMaxSpeedThresholdAlerts__c.field-meta.xml
<CustomField>
    <fullName>maps__ReceiveMaxSpeedThresholdAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Max Speed Threshold Alerts</description>
    <inlineHelpText>Indiquez si le conducteur doit recevoir les alertes de seuil de vitesse maximum</inlineHelpText>
    <label>Receive Max Speed Threshold Alerts</label>
    <type>Checkbox</type>
</CustomField>