unpackaged/main/default/objects/maps__LiveDriver__c/fields/maps__ReceivePostedSpeedAlerts__c.field-meta.xml
<CustomField>
    <fullName>maps__ReceivePostedSpeedAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Posted Speed Alerts</description>
    <inlineHelpText>Indiquez si le conducteur doit recevoir les alertes de vitesse publiée</inlineHelpText>
    <label>Receive Posted Speed Alerts?</label>
    <type>Checkbox</type>
</CustomField>