unpackaged/main/default/objects/maps__LiveDriver__c/fields/maps__ReceiveStopAlerts__c.field-meta.xml
<CustomField>
    <fullName>maps__ReceiveStopAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Stop Alerts</description>
    <inlineHelpText>Indiquez si le conducteur doit recevoir les alertes d&#39;arrêt</inlineHelpText>
    <label>Receive Stop Alerts?</label>
    <type>Checkbox</type>
</CustomField>